Fixed alignment on sub-pages

--- a/arunprasath_jayaprakash/website/static/style.css
+++ b/arunprasath_jayaprakash/website/static/style.css
@@ -13,6 +13,10 @@ h1 {
     padding: 10px 20px;
 }
 
+a {
+  text-decoration: none;
+}
+
 button {
     display: inline-block;
     margin: 20px auto;
